[gd_scene load_steps=15 format=3 uid="uid://byk1yn40530yk"]

[ext_resource type="Script" uid="uid://cbkciksee3g6j" path="res://scripts/MiniGames/ReforestationLevel1.gd" id="1_1vsfv"]
[ext_resource type="AudioStream" uid="uid://cjcnqrxa8wkw6" path="res://assets/sounds/051_use_item_01.wav" id="1_b1csr"]
[ext_resource type="AudioStream" uid="uid://bdmf3382te8dp" path="res://assets/sounds/001_Hover_01.wav" id="2_1vsfv"]
[ext_resource type="Texture2D" uid="uid://dle3d0oii46ob" path="res://assets/items/background.png" id="3_nmn2k"]
[ext_resource type="Texture2D" uid="uid://bgkwwr1qv1ml1" path="res://assets/items/Trees/Glondo_Game_Tree_Sprites_Tree_2.png" id="4_l2dhc"]
[ext_resource type="Texture2D" uid="uid://ds0iin0t0tcf" path="res://assets/items/Orange/scaled-at-50/b_No.png" id="5_tcbjt"]
[ext_resource type="Texture2D" uid="uid://ba3br5bhh0fnc" path="res://assets/items/loading_bar_frames.png" id="6_nmn2k"]
[ext_resource type="Texture2D" uid="uid://cemn0bqsx2kgt" path="res://assets/items/Red/scaled-at-50/b_No.png" id="6_tv46p"]
[ext_resource type="FontFile" uid="uid://b7rxowm6cft1e" path="res://assets/fonts/lucasarts-scumm-outline.ttf" id="7_l2dhc"]
[ext_resource type="FontFile" uid="uid://jss3joppgef5" path="res://assets/fonts/lucasarts-scumm-outline.fnt" id="10_tcbjt"]
[ext_resource type="AudioStream" uid="uid://xax3juonscc0" path="res://assets/sounds/game_bg.mp3" id="11_tv46p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hkfm"]
size = Vector2(263, 384.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2dhc"]
atlas = ExtResource("6_nmn2k")
region = Rect2(0, 32, 488, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcbjt"]
atlas = ExtResource("6_nmn2k")
region = Rect2(0, 880, 488, 24)

[node name="ReforestationLevel1" type="Node2D"]
script = ExtResource("1_1vsfv")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1058, 88)
stream = ExtResource("1_b1csr")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1058, 88)
stream = ExtResource("2_1vsfv")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1154.0
offset_bottom = 650.0
texture = ExtResource("3_nmn2k")
expand_mode = 2

[node name="TreeImage" type="Sprite2D" parent="."]
position = Vector2(110.842, 355)
scale = Vector2(2.24182, 1.96007)
texture = ExtResource("4_l2dhc")

[node name="TreeArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(135, 473)
shape = SubResource("RectangleShape2D_5hkfm")

[node name="InsectContainer" type="Node2D" parent="."]
position = Vector2(3, 3)

[node name="TreeHealth" type="TextureProgressBar" parent="."]
offset_left = 353.0
offset_top = 18.0
offset_right = 849.0
offset_bottom = 62.0
value = 100.0
texture_under = SubResource("AtlasTexture_l2dhc")
texture_progress = SubResource("AtlasTexture_tcbjt")

[node name="HealthChangeLabel" type="Label" parent="TreeHealth"]
layout_mode = 0
offset_left = 129.0
offset_top = 44.0
offset_right = 342.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("7_l2dhc")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
uppercase = true

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 1063.0
offset_top = 57.0
offset_right = 1144.0
offset_bottom = 141.0
texture_normal = ExtResource("5_tcbjt")
texture_pressed = ExtResource("6_tv46p")
texture_hover = ExtResource("6_tv46p")
stretch_mode = 4

[node name="InsectSpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="GameOver" type="ColorRect" parent="."]
visible = false
offset_left = -57.0
offset_top = -33.0
offset_right = 1175.0
offset_bottom = 671.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 163.0
offset_top = 142.0
offset_right = 966.0
offset_bottom = 503.0
theme_override_fonts/font = ExtResource("7_l2dhc")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
offset_left = -65.0
offset_top = -44.0
offset_right = 1189.0
offset_bottom = 670.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 489.0
offset_top = 237.0
offset_right = 1226.0
offset_bottom = 665.0
theme_override_fonts/font = ExtResource("10_tcbjt")
theme_override_font_sizes/font_size = 40
text = "Save the tree from harmful insects!

Click on cockroaches and ants to remove them.

Don't click on butterflies, beetles and ladybugs.

The game starts when you click anywhere.
"
horizontal_alignment = 1
autowrap_mode = 3

[node name="BG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_tv46p")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
